fix: attempt at fixing ak-editor-popup alignment issues

--- a/packages/ak-editor-bitbucket/src/shadow.less
+++ b/packages/ak-editor-bitbucket/src/shadow.less
@@ -1,5 +1,19 @@
 @import '~ak-editor-shared-styles/src/index';
 
+.host-styles() {
+  display: block;
+}
+
+.ak-editor-bitbucket,
+ak-editor-bitbucket {
+  .host-styles();
+}
+
+:host {
+  .host-styles();
+}
+
+
 .root {
   display: block;
   position: relative;
